overlays/uksouth-dev/default/binkweb-nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  name: web.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
    - host: web.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: binkweb-nginx
                port:
                  number: 80
  tls:
    - hosts:
        - web.${cluster_name}.${location}.bink.sh
      secretName: web.${cluster_name}.${location}.bink.sh
